@@ -18,8 +18,7 @@
 
 #include <KLocale>
 
-namespace Transcoding
-{
+using namespace Transcoding;
 
 Mp3Format::Mp3Format()
 {
@@ -105,7 +104,5 @@ Mp3Format::ffmpegParameters( const Configuration &configuration ) const
 bool
 Mp3Format::verifyAvailability( const QString &ffmpegOutput ) const
 {
-    return ffmpegOutput.contains( QRegExp( ".EA... libmp3lame" ) );
-}
-
+    return ffmpegOutput.contains( QRegExp( "^ .EA....*libmp3lame" ) );
 }
