@@ -29,6 +29,7 @@ VERSION 2.7-Beta 1
     * New optional dependency for Amazon downloads: clamz.
 
   BUGFIXES:
+    * Fix available transcoding encoders detection with ffmpeg 1.0. (BR 309454)
     * Fix playback resuming with phonon-gstreamer; raise phonon-vlc dependency
       to at least 0.6.1 as a side-effect. (BR 290612)
     * Create collections even for SD/MMC/etc. cards on PCI-connected slots.
